[metadata]
description-file = README.md

[flake8]
ignore =
    E402,  # module level import not at top of file
    E201,  # whitespace after '('
    E202,  # whitespace before ')'
    E712,  # comparison to bool (for assertions)
    E221,  # multiple spaces before operator
    E241   # Multiple spaces after ','
max-line-length = 150

[tool:pytest]
testpaths = rstoolbox

[wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = rstoolbox/_version.py
versionfile_build = rstoolbox/_version.py
tag_prefix = v
parentdir_prefix = RosettaSilentToolbox-